--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="utf-8" />
-		<title>RubensDEV: Things I learned</title>
-	</head>
-	<body>
-		<p>Hello world!</p>
-	</body>
-</html>
+---
+layout: default
+title: RubensDEV Things I learned
+---
+
+<div id="home">
+  <ul class="posts">
+    {% for post in site.posts %}
+      <!-- <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li> -->
+		<li>
+			<div class="post clearfix">
+				<div class="dateformat">
+					<div class="leftside">
+						<div class="day_month">{{post.date | date: "%d %b" }}</div>
+					</div>
+					<div class="rightside">
+						<div class="year">{{post.date | date: "%Y" }}</div>
+					</div>
+				</div>
+				<div class="post_content">
+					<div class="title"><a href="{{ post.url }}#sp">{{ post.title }}</a></div>
+					<div class="content">
+						{{ post.content}} 
+					</div>
+				</div>
+				<div style="clear:both;"></div>
+			</div>
+		</li>
+    {% endfor %}
+  </ul>
+</div>
