Mobile version and Contact Page added

--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,14 @@
 layout: default
 title: RubensDEV About Me
 ---
-
-<article 
-<p> My bio goes here </p>
+<article id="aboutMe" class="single_post clearfix">
+	<img id="aboutPhoto" src="/img/rubens.jpg" />
+	<div class="introduction">
+		<h1>Rubens García</h1>
+		<h2>Technical Engineer in Computer Science (Systems)</h2>
+		<p>I'm Technical Engineer in Computer Science (Systems) by Universidad de La Laguna. Anytime I can, I spend 
+         time learning programming languages, methodologies and ways to solve problems. Currently I spend time 
+         developing Android apps, webapps and investigating other fields related with my career.</p>
+		<p>
+	</div>
+</article>
