--- a/my_projects/index.html
+++ b/my_projects/index.html
@@ -3,17 +3,55 @@ layout: default
 title: RubensDEV Projects
 ---
 <article id="projects" class="single_post clearfix">
-	<h2>Here are the projects I'm working on</h2>
+	<h2>My Projects</h2>
 	<div class="projectBox">
 		<img src="/img/todoapp_icon.png">
 		<div class="projectDesc">
 			<h2> Flat TODO List </h2>
-			<p class="description">This is an offline webapp based on 
-			<a href="https://github.com/paullewis/weight-tracker">Paul Lewis Weight Tracker webapp</a>. 
-         I've dissected the application and I can say that I've learned several things 
-			about Javascript and CSS3. I have just the splashscreen of the app by now. 
-			If you want, you can take a look <a href="http://rubensdev.com/todo-app">here</a>.
-         (Source: <a href="http://github.com/rubensdev/todo-app">Github</a>)</p>
+			<p class="description">This is an offline webapp built with <a href="http://angularjs.org">AngularJS</a>.
+			It's a basic TODO List with HTML5 Web Storage as database and nice flat design with some candy animations
+         in CSS3. In this project I've used <a href="http://gruntjs.com">GruntJS</a> for automating some tasks like
+         compilation and minification. The web app is available <a href="http://rubensdev.com/todo-app">here</a> 
+			(Source: <a href="http://github.com/rubensdev/todo-app">Github</a>)</p>
 		</div>
 	</div>
+	<div class="projectBox">
+		<img src="/img/piumpium.png">
+		<div class="projectDesc">
+			<h2>Pium Pium</h2>
+			<p class="description">This is my first game in Android, built with 
+			<a href="http://libgdx.badlogicgames.com/">LibGDX Framework</a>.The idea came up when I was playing with box2d physics, 
+			drawing rectangles and make them crash. I was amazed the fun it was and I made one of them fly. Then, I made the flying 
+			rectangle could shoot and the rest of rectangles were the enemies moving randomly over a terrain. Just imagination and 
+			some textures applied and voilá. <a href="https://play.google.com/store/apps/details?id=com.rubensdev.rphysics">Link to Play Store</a>.</p> 
+		</div>
+	</div>
+	<div class="projectBox">
+		<img src="/img/batutahero.png">
+		<div class="projectDesc">
+			<h2>Batuta Hero</h2>
+			<p class="description">The BatonMan's sucessor. The idea was extended to reach this level of craziness. 
+			<a href="https://play.google.com/store/apps/details?id=com.rubensdev.BatutaHero">Link to Play Store</a>.</p> 
+		</div>
+	</div>
+	<div class="projectBox">
+		<img src="/img/batonman.png">
+		<div class="projectDesc">
+			<h2>BatonMan</h2>
+			<p class="description">A colleague from university gave me the idea of making an entertainment app which 
+			consisted in moving a baton and act like a orchestra director. If you stop, the music stops. That's just it. 
+			<a href="https://play.google.com/store/apps/details?id=com.rubensdev.PlayOrchestra">Link to Play Store</a>.</p> 
+		</div>
+	</div>
+	<div class="projectBox">
+		<img src="/img/simple.png">
+		<div class="projectDesc">
+			<h2>Simple</h2>
+			<p class="description"> Simple was my first Android app. I didn't know what to do and I was eager to develop 
+			for Android. So I was researching a bit and finally I made it using canvas in the whole app. That was crazy, but 
+			fun and sometimes is interesting get out of the common.
+			<a href="https://play.google.com/store/apps/details?id=com.rubensdev.SimpleApp">Link to Play Store</a>.</p>
+		</div>
+	</div>
+
 </article>
