--- a/about/index.html
+++ b/about/index.html
@@ -8,8 +8,8 @@ title: RubensDEV About Me
 		<h1>Rubens García</h1>
 		<h2>Technical Engineer in Computer Science (Systems)</h2>
 		<p>I'm Technical Engineer in Computer Science (Systems) by Universidad de La Laguna. Anytime I can, I spend 
-         time learning programming languages, methodologies and ways to solve problems. Currently I spend time 
-         developing Android apps, webapps and investigating other fields related with my career.</p>
+         time learning programming languages, methodologies and ways to solve problems. Currently, I spend time 
+         developing Android apps, web applications and investigating other fields related with my career.</p>
 		<p>
 	</div>
 </article>
